<resources>
    <string name="app_name">CovidInfo</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ansFirstText">COVID-19 is the infectious disease caused by the most recently discovered corona virus. This new virus and disease were unknown before the outbreak began in Wuhan, China, in December 2019.</string>
    <string name="queSec">What is corona virus?</string>
    <string name="ansSec">Corona viruses are a large family of viruses which may cause illness in animals or humans. In humans, several coronaviruses are known to cause respiratory infections ranging from the common cold to more severe diseases such as Middle East Respiratory Syndrome (MERS) and Severe Acute Respiratory Syndrome (SARS). The most recently discovered coronavirus causes coronavirus disease COVID-19</string>
    <string name="english">English</string>
    <string name="hindi">हिन्दी</string>
    <string name="drCough">Dry Cough</string>
    <string name="fever_tiredness">Fever, Tiredness</string>
    <string name="aches_and_pains">Aches and Pains</string>
    <string name="runny_nose">Runny Nose</string>
    <string name="sore_throat_or_diarrhea">Sore throat or diarrhea</string>

    <string name="state_name">State Name</string>
    <string name="version_1_0">Version 1.0</string>
    <string name="uibsoft_co_gmail_com">uibsoft.co@gmail.com</string>
    <string name="developer_contact">Developer contact:</string>
    <string name="powered_by">Powered by-</string>
    <string name="todo">TODO</string>
</resources>
