<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    android:nestedScrollingEnabled="true"
    android:scrollbars="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.CovidLive">


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:visibility="visible"
      >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical"
            android:nestedScrollingEnabled="true"
            android:orientation="vertical"
            >



    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardUseCompatPadding="true"
        app:cardCornerRadius="10dp"
        app:cardElevation="1dp"

        android:layout_marginHorizontal="20dp"

        >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"


            android:gravity="center"
            android:orientation="vertical">


            <TextView
                android:id="@+id/confirm_case"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lato_bold"
                android:text="Total Confirmed"
                android:textColor="#5C5A5A"
                android:textSize="22dp"
                tools:ignore="HardcodedText,SpUsage">

            </TextView>


            <TextView
                android:id="@+id/confirmCase"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lato_regular"
                android:text="0000000"
                android:layout_marginTop="5dp"

                android:textColor="#737272"
                android:textSize="24sp"
                tools:ignore="HardcodedText">

            </TextView>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardUseCompatPadding="true"
                app:cardCornerRadius="10dp"
                android:layout_marginHorizontal="20dp"
        app:cardElevation="1dp"

        >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="vertical"
                    >




            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lato_bold"
                android:text="Total Death"
                android:textColor="#AC4444"
                android:textSize="22sp"
                tools:ignore="HardcodedText">

            </TextView>

            <TextView
                android:id="@+id/totalDeath"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lato_regular"
                android:text="0000000"
                android:layout_marginTop="5dp"

                android:textColor="#C53F3F"
                android:textSize="24sp"
                tools:ignore="HardcodedText">

            </TextView>

                </LinearLayout>

            </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardUseCompatPadding="true"
        app:cardCornerRadius="10dp"
        app:cardElevation="1dp"
        android:layout_marginHorizontal="20dp"
  >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical"
            >



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lato_bold"
                android:text="Total Recovered"
                android:textColor="@color/green"
                android:textSize="22sp"
                tools:ignore="HardcodedText">

            </TextView>


            <TextView
                android:id="@+id/recovered"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lato_regular"
                android:text="000000"
                android:layout_marginTop="5dp"
                android:textColor="@color/green"
                android:textSize="24sp"
                tools:ignore="HardcodedText">

            </TextView>


        </LinearLayout>

    </androidx.cardview.widget.CardView>




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:elevation="10dp"

        android:layout_marginTop="10dp"

        android:scrollbars="vertical"


        android:background="@drawable/back_solid">


        <androidx.cardview.widget.CardView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            app:cardCornerRadius="20dp"
            app:cardElevation="8dp"
            android:layout_margin="10dp"
            app:cardBackgroundColor="#E91E63"


            >


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="What is COVID-19?"
            android:layout_margin="10dp"
            android:textSize="18sp"
            android:id="@+id/queText"
            android:textColor="@color/colorPrimary"
            android:fontFamily="@font/poppins_bold"
            tools:ignore="HardcodedText">

        </TextView>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ansFirstText"
            android:textSize="16sp"

            android:textColor="@color/colorPrimary"

            android:id="@+id/ansFirst"

            android:padding="5dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="43dp"
            android:fontFamily="@font/lato_regular"
            >

        </TextView>
        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:elevation="5dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="8dp"

            android:layout_marginHorizontal="10dp"
            app:cardBackgroundColor="#4CAF50"


            >


            <TextView
                android:id="@+id/queTextTwo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/queSec"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp">

            </TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ansSec"
                android:textSize="15sp"

                android:textColor="@color/colorPrimary"

                android:id="@+id/ansTextOneTwo"

                android:padding="2dp"
                android:layout_marginBottom="5dp"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="40dp"
                android:fontFamily="@font/lato_regular"
                >

            </TextView>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


</LinearLayout>

